# SAKS-SDK

./: README.md  pyproject.toml
doc/: API.md  CHANGELOG.md  MIGRATION.md  PROJECT_STRUCTURE.md  README.md
examples/: 01_hello_saks.py  02_digital_display.py  03_temperature_monitor.py  04_button_interaction.py  05_cpu_temperature_alarm.py  06_full_demo.py  07_segment_deep_dive.py  08_74hc595_deep_dive.py  09_tm1637_deep_dive.py  10_buzzer_deep_dive.py  11_led_deep_dive.py  12_ds18b20_deep_dive.py  13_temp_dual_display.py  14_scrolling_text.py  15_binary_counter.py  16_reaction_game.py  17_stopwatch.py  18_led_scanner.py  19_countdown_timer.py  20_temp_alarm.py  21_music_box.py  22_electronic_dice.py  23_breathing_led.py  24_morse_code.py  25_password_lock.py  26_snake_game.py  27_metronome.py  28_digital_clock.py  29_guess_number.py  30_alarm_siren.py  31_lucky_wheel.py  32_dashboard.py  33_simon_says.py  34_whack_a_mole.py  35_ping_pong.py  36_stacker.py  37_rhythm_master.py  38_bomb_defusal.py  39_binary_decoder.py  40_hot_potato.py  (+1 more)
sakshat/: __init__.py  _buzzer.py  _core.py  _digital_display_tm1637.py  _dip_switch.py  _ds18b20.py  _exceptions.py  _gpio.py  _ic_74hc595.py  _ic_tm1637.py  _led.py  _led_74hc595.py  _pins.py  _tact.py
tests/: conftest.py  test_buzzer.py  test_core.py  test_digital_display.py  test_dip_switch.py  test_ds18b20.py  test_exceptions.py  test_ic_74hc595.py  test_ic_tm1637.py  test_led.py  test_pins.py  test_tact.py
tools/: gpio_diag.py
